--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -260,5 +260,11 @@ jobs:
         uses: actions/checkout@v5
       - name: Install dependencies
         run: go mod tidy && go mod vendor
-      - name: Run SQLite tests
-        run: go test -v -count=1 -timeout 60s ./IceFireDB-SQLite/...
+      - name: Run SQLite comprehensive tests
+        run: go test -v -count=1 -timeout 300s ./IceFireDB-SQLite/...
+      - name: Run SQLite performance tests
+        run: cd IceFireDB-SQLite && go test -v -count=1 -timeout 120s ./internal/sqlite -run "TestPerformance"
+      - name: Run SQLite boundary tests
+        run: cd IceFireDB-SQLite && go test -v -count=1 -timeout 120s ./internal/sqlite -run "TestBoundary"
+      - name: Run SQLite integration tests
+        run: cd IceFireDB-SQLite && go test -v -count=1 -timeout 120s ./internal/sqlite -run "TestIntegration"
